# multi-vendor-digital-store

./: .env  .gitignore  README.md  db.sqlite3  docker-compose.yml  package-lock.json  package.json  pyproject.toml
accounts/: admin.py  models.py  serializers.py  views.py
accounts/migrations/: 0002_user_address_user_phone_number.py  0004_user_avatar.py
backend/: Dockerfile  manage.py  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_address_user_phone_number.py  0003_alter_user_managers_alter_user_email.py  0004_user_avatar.py
backend/digital_store/: asgi.py  settings.py  urls.py  wsgi.py
backend/orders/: admin.py  models.py  serializers.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_remove_order_product_remove_order_quantity_orderitem.py  0003_order_vendor.py  0004_alter_order_vendor.py
backend/products/: admin.py  models.py  serializers.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py  0003_product_file_product_image.py  0004_alter_product_file_alter_product_image.py
backend/vendors/: admin.py  models.py  serializers.py  urls.py  views.py
backend/vendors/migrations/: 0001_initial.py  0002_auto_20250130_1521.py
digital_store/: asgi.py  settings.py  urls.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/profile/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/cart/: page.tsx
frontend/app/components/: CartPage.tsx  HomePage.tsx  Layout.tsx  ProductPage.tsx
frontend/app/components/ui/: avatar.tsx  menu.tsx
frontend/app/pages/home/: index.tsx
frontend/app/products/details/[id]/: page.tsx
frontend/app/products/new/: page.tsx
frontend/app/utils/: api.ts
frontend/app/vendors/dashboard/: page.tsx
frontend/app/vendors/register/: page.tsx
node_modules-old/: .package-lock.json
products/: models.py  serializers.py  urls.py
products/migrations/: 0001_initial.py  0002_auto_20250130_1521.py  0003_product_file_product_image.py
vendors/: models.py  serializers.py  views.py
vendors/migrations/: 0001_initial.py
